[package]
name = "glow-fee-distributor"
version = "1.0.0"
authors = ["Glow Protocol Ltd."]
edition = "2018"
license = "Apache-2.0"
description = "A fee distributor contract for Glow Protocol - allows for glow to be distributed among veGLOW holders proportionally to their veGLOW balances"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = "0.8.0"
terraswap = "2.3.0"
cosmwasm-std = "0.16.0"
cosmwasm-storage = "0.16.0"
cw-storage-plus = "0.9.0"
glow-protocol = { version = "1.0.0", path = "../../packages/glow_protocol" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.20"
hex = "0.4"

[dev-dependencies]
cosmwasm-schema = "0.16.0"
terra-cosmwasm = "2.2.0"
